name:                memcached
version:             0.2.2
stability:           Alpha
synopsis:            Haskell Memcached client
description:         Haskell Memcached client
category:            Network
license:             OtherLicense
license-file:        LICENSE
author:              John Hann <john@nowait.com>
maintainer:          John Hann <john@nowait.com>
homepage:            http://github.com/nowaitapp/haskell-memcached
build-type:          Simple

tested-with:         GHC==7.10.2

build-depends:
  base >3 && <5,
  network,
  time >=1 && <2,
  bytestring >=0.9 && <0.11,
  utf8-light >=0.4 && <1.0

extra-source-files:
  Setup.hs,
  Test.hs,
  Demo.lhs,
  ChangeLog,
  NEWS

exposed-modules:
  Network.Memcache,
  Network.Memcache.Server,
  Network.Memcache.Memcache,
  Network.Memcache.Protocol,
  Network.Memcache.Serializable,
  Network.Memcache.Key,
  Network.Memcache.Cluster,
  Network.Memcache.Helpers

ghc-options:         -Wall
ghc-prof-options:    -prof -auto-all
